--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ scipy==1.16.2
 matplotlib==3.8.2
 notebook==7.4.2
 pylatexenc==2.10
+fqdn==1.5.1 
+isoduration==20.11.0 
+jsonpointer==3.0.0
+pip-chill==1.0.3
+tinycss2==1.4.0 
+uri-template==1.3.0 
+webcolors==24.11.1
+pandas==2.2.3
