--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ venv.bak/
 .vscode/
 .vs/
 
-# ignore generated data (`data` and `data(toy)`)
+# Ignore generated data (`data` and `data(toy)`)
 data/
 data(toy)/
+
+# Ignore .bat
+.bat
