--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,10 @@ json5==0.12.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 jupyter_server==2.16.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.4.2
@@ -69,7 +69,7 @@ pbr==6.1.1
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==11.2.1
-pip==24.0
+pipreqs==0.5.0
 platformdirs==4.3.8
 ply==3.11
 prometheus_client==0.22.0
@@ -97,7 +97,6 @@ rpds-py==0.25.0
 rustworkx==0.16.0
 scipy==1.14.1
 Send2Trash==1.8.3
-setuptools==65.5.1
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
@@ -118,5 +117,4 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-wheel==0.45.1
 yarg==0.1.9
